# oop_exercise_03

./: CMakeLists.txt  figure.h  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  report_oop_03.docx  rhombus.cpp  rhombus.h  test_01.txt  test_02.txt  test_03.txt  trapeze.cpp  trapeze.h
